# streamdeck-webex-plugin

./: .gitignore  CMakeLists.txt  README.md
Release/: com.lostdomain.zoom.streamDeckPlugin
Sources/: CMakeLists.txt  MacOS.cpp  WebexStreamDeckPlugin.cpp  WebexStreamDeckPlugin.h  Windows.cpp  main.cpp
sdPlugin/: manifest.json.cmake
sdPlugin/propertyinspector/: common.js  index-customshortcut.html  index-leave.html  index-mute-all.html  index-mute.html  index-record-cloud.html  index-record-local.html  index-share.html  index-unmute-all.html  index-video.html  index.html
